[workspace]
resolver = "2"
members = [
    "mallockit",
    "mallockit/macros",
    "bump",
    "buddy",
    "hoard",
    "sanity",
    "examples/rust-allocator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
debug = true

[workspace.dependencies]
libc = "0.2"
errno = "0.2.8"
spin = { version = "0.9.3", features = ["std"] }
ctor = "0.1"
num_cpus = "1.13.1"
atomic = "0.5.1"
quote = "1.0.20"
syn = "1.0.98"
array-const-fn-init = "0.1.1"
shell-words = "1.1.0"
cargo_metadata = "0.18.1"

[workspace.metadata.malloc-tests]
sed = "bash ./mallockit/tests/sed.sh"
zip = "bash ./mallockit/tests/zip.sh"
clang = "clang++ ./mallockit/tests/test.cpp -std=c++14 -O3 -o /dev/null"
gcc = "g++ ./mallockit/tests/test.cpp -std=c++14 -O3 -o /dev/null"
ls = "ls -al"
ping = "ping -i 0.2 -c 8 localhost"
python = "python3 ./mallockit/tests/test.py"
