[tool.poetry]
name = "bench"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "bench" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
psutil = "^5.9.6"
notebook = "^7.0.6"
numpy = "^1.26.2"
matplotlib = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
