[package]
name = "mallockit-bench"
description = "mimalloc-bench, rewritten in Rust with harness"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
harness = "0.0.5"
hoard = { path = "../hoard" }
buddy = { path = "../buddy" }
num_cpus.workspace = true

[[bench]]
name = "cfrac"
harness = false

[[bench]]
name = "barnes"
harness = false

[[bench]]
name = "espresso"
harness = false

# [[bench]]
# name = "gs"
# harness = false

# [[bench]]
# name = "z3"
# harness = false

[[bench]]
name = "larson"
harness = false

[[bench]]
name = "lean"
harness = false

# [[bench]]
# name = "lua"
# harness = false

[[bench]]
name = "redis"
harness = false

[[bench]]
name = "rocksdb"
harness = false

[package.metadata.harness.profiles.default.builds]
sys = { env = { MALLOC = "sys" } }
hoard = { env = { MALLOC = "hoard" } }
