[package]
name = "mallockit-bench"
description = "mimalloc-bench, rewritten in Rust with harness"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
harness = "0.0.5"
num_cpus.workspace = true

[[bench]]
name = "cfrac"
harness = false

[[bench]]
name = "barnes"
harness = false

[[bench]]
name = "espresso"
harness = false

# [[bench]]
# name = "gs"
# harness = false

# [[bench]]
# name = "z3"
# harness = false

[[bench]]
name = "larson"
harness = false

[[bench]]
name = "lean"
harness = false

# [[bench]]
# name = "lua"
# harness = false

[[bench]]
name = "redis"
harness = false

[[bench]]
name = "rocksdb"
harness = false

[package.metadata.harness.profiles.default.builds]
sys = { env = { MALLOC = "sys", IS_MALLOCKIT = "0" } }
# mallockit allocators
mk_hoard = { env = { MALLOC = "hoard", IS_MALLOCKIT = "1" } }
# mk_buddy = { env = { MALLOC = "buddy", IS_MALLOCKIT = "1" } }
# other allocators
hd = { env = { MALLOC = "hd", IS_MALLOCKIT = "0" } }
mi = { env = { MALLOC = "mi", IS_MALLOCKIT = "0" } }
mi2 = { env = { MALLOC = "mi2", IS_MALLOCKIT = "0" } }
tc = { env = { MALLOC = "tc", IS_MALLOCKIT = "0" } }
je = { env = { MALLOC = "je", IS_MALLOCKIT = "0" } }
