[package]
name = "mallockit-bump"
version = { workspace = true }
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bump"
crate-type = ["cdylib", "staticlib"]

[dependencies]
mallockit = { path = "../mallockit" }

[features]
default = []
no_malloc_api = []
