cargo-features = ["workspace-inheritance"]

[package]
name = "hoard"
version = { workspace = true }
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
mallockit = { path = "../mallockit" }
spin = { workspace = true }
array-const-fn-init = { workspace = true }