[package]
name = "mallockit"
version = "0.1.0"
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
errno = "0.2"
spin = { version="0.9", features = ["std"] }
ctor = "0.1"
mallockit_proc_macro = { path = "./proc_macro" }
shell-words = "1.0.0"
num_cpus = "1.13.0"
crossbeam = "0.8.1"
atomic = "0.5.1"
extension-traits = "1.0.1"

[build-dependencies]
yaml-rust = "0.4.5"

[dev-dependencies]
concat-idents = "1.1.2"

[features]
default = [ "transparent_huge_page" ]
transparent_huge_page = []
slow_assert = []
stat = []
slow_tests = []
macos_malloc_zone_override = []