cargo-features = ["workspace-inheritance"]

[package]
name = "mallockit"
version = { workspace = true }
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { workspace = true }
errno = { workspace = true }
spin = { workspace = true }
ctor = { workspace = true }
num_cpus = { workspace = true }
crossbeam = { workspace = true }
atomic = { workspace = true }
shell-words = { workspace = true }
mallockit_proc_macro = { path = "./proc_macro" }

[build-dependencies]
yaml-rust = "0.4.5"

[dev-dependencies]
concat-idents = "1.1.2"

[features]
default = [ "transparent_huge_page" ]
transparent_huge_page = []
slow_assert = []
stat = []
slow_tests = []
macos_malloc_zone_override = []