[package]
name = "mallockit"
version = { workspace = true }
authors = ["Wenyu Zhao <wenyuzhaox@gmail.com>"]
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { workspace = true }
errno = { workspace = true }
spin = { workspace = true }
ctor = { workspace = true }
num_cpus = { workspace = true }
atomic = { workspace = true }
shell-words = { workspace = true }
mallockit-macros = { path = "./macros" }

[build-dependencies]
cargo_metadata = { workspace = true }

[features]
default = ["transparent_huge_page"]
transparent_huge_page = []
slow_assert = []
stat = []
slow_tests = []
macos_malloc_zone_override = []
