[package]
name = "mallockit-macros"
version = { workspace = true }
authors = ["Wenyu Zhao <wenyuzhaox@gmail.com>"]
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
cargo_metadata = { workspace = true }
proc-macro2 = "1.0.86"
